Database added successfully

--- a/BookMark.RestApi/appsettings.Development.json
+++ b/BookMark.RestApi/appsettings.Development.json
@@ -5,5 +5,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "local": "server=localhost,1433;database=bookmarkdb;user id=sa;password=Password12345;",
+    "docker": "data source=ormdata;database=bookmarkdb;user id=sa;password=Password12345;"
   }
 }
