--- a/BookMark.RestApi/appsettings.json
+++ b/BookMark.RestApi/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "local": "server=localhost,1433;database=bookmarkdb;user id=sa;password=Password12345;",
+    "docker": "data source=ormdata;database=bookmarkdb;user id=sa;password=Password12345;"
+  }
 }
