--- a/BookMark.RestApi/BookMark.RestApi.csproj
+++ b/BookMark.RestApi/BookMark.RestApi.csproj
@@ -6,6 +6,11 @@
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="3.3.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
     <PackageReference Include="SwashBuckle.AspNetCore" Version="5.3.0" />
   </ItemGroup>
 
