--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,23 +4,25 @@ networks:
   skynet:
 
 services:
-#   database:
-#     container_name: ormdata
-#     image: mcr.microsoft.com/mssql/server:2017-latest
-#     environment: 
-#       ACCEPT_EULA: "y"
-#       SA_PASSWORD: "Password12345"
-#     build: .
-#     expose: 
-#       - 1433
-#     ports: 
-#       - 1433:1433
-#     networks: 
-#       - skynet
+  ormdata:
+    container_name: ormdata
+    image: synaodev/bookmark-ormdata
+    environment: 
+      ACCEPT_EULA: "y"
+      SA_PASSWORD: "Password12345"
+    build:
+      context: .
+      dockerfile: ormdata.dockerfile
+    expose: 
+      - 1433
+    ports: 
+      - 1433:1433
+    networks: 
+      - skynet
   restapi:
     container_name: restapi
-    # depends_on: 
-    #   - database
+    depends_on: 
+      - ormdata
     image: synaodev/bookmark-restapi
     environment: 
       RestApiUrl: "http://restapi"
@@ -33,13 +35,13 @@ services:
       - 5000:80
     networks:
       - skynet
-    # links: 
-    #   - database
+    links: 
+      - ormdata
     restart: always
   client:
     container_name: client
     depends_on: 
-      # - database
+      - ormdata
       - restapi
     image: synaodev/bookmark-client
     environment: 
