--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -105,17 +105,17 @@ stages:
               resourceGroupName: $(AzureResourceGroup)
               multicontainerConfigFile: docker-compose.yaml
               deployToSlotOrASE: true
-              slotName: staging
-      - job: manage_app
-        pool:
-          vmImage: ubuntu-18.04
-        steps:
-          - task: AzureAppServiceManage@0
-            displayName: Manage Services
-            inputs:
-              Action: Swap Slots
-              WebAppName: bookmark-webapp
-              azureSubscription: azure
-              ResourceGroupName: $(AzureResourceGroup)
-              SwapWithProduction: true
-              SourceSlot: staging
+              # slotName: staging
+      # - job: manage_app
+      #   pool:
+      #     vmImage: ubuntu-18.04
+      #   steps:
+      #     - task: AzureAppServiceManage@0
+      #       displayName: Manage Services
+      #       inputs:
+      #         Action: Swap Slots
+      #         WebAppName: bookmark-webapp
+      #         azureSubscription: azure
+      #         ResourceGroupName: $(AzureResourceGroup)
+      #         SwapWithProduction: true
+      #         SourceSlot: staging
