--- a/BookMark.Angular/package.json
+++ b/BookMark.Angular/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "@angular/cli": "^9.1.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "nodemon": "^2.0.2"
   }
