--- a/BookMark.Angular/package.json
+++ b/BookMark.Angular/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@angular/cli": "^9.1.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.2"
   }
