--- a/BookMark.Angular/public/angular.json
+++ b/BookMark.Angular/public/angular.json
@@ -62,8 +62,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "public:build",
-            "proxyConfig": "src/proxy.conf.json"
+            "browserTarget": "public:build"
           },
           "configurations": {
             "production": {
