--- a/BookMark.Client/Properties/launchSettings.json
+++ b/BookMark.Client/Properties/launchSettings.json
@@ -18,7 +18,7 @@
     "BookMark.Client": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:8001;http://localhost:8000",
+      "applicationUrl": "http://localhost:8000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
