--- a/BookMark.Angular/package.json
+++ b/BookMark.Angular/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "nodemon index.js",
+    "start": "node index.js",
     "ng": "ng"
   },
   "author": "BookMark Development Team",
